fix 捕获异常
